[HTML] Add virtual list principles

--- a/HTML/app/styles/main.css
+++ b/HTML/app/styles/main.css
@@ -55,6 +55,10 @@ body {
 }
 
 .mainPage .photo {
-  display: inline-block;
+  display: block;
+  /*display: inline-block;*/
+  /*vertical-align: middle;*/
   margin: 2px;
+  height: 120px;
+  min-width: 10px;
 }
