--- a/HTML/app/styles/main.css
+++ b/HTML/app/styles/main.css
@@ -7,8 +7,11 @@
 
 body {
   padding: 0;
-  background-color: #000;
-  color: #fff;
+}
+
+/** for uib */
+.nav, .pagination, .carousel, .panel-title a {
+  cursor: pointer;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -66,4 +69,18 @@ body {
 
 .mainPage .photosList .photo img {
   background-image: url('/images/defaultImg.gif');
+}
+
+.mainPage .filter {
+  margin: 0;
+}
+
+.mainPage .filter .panel-heading {
+  padding-bottom: 1px;
+  padding-top: 1px;
+}
+
+.mainPage .filter .panel-heading h4 {
+  padding: 0;
+  margin: 0;
 }
