--- a/HTML/app/views/state.html
+++ b/HTML/app/views/state.html
@@ -1,7 +1,8 @@
 <div class="statePage">
   Information à propos du scan :<br/>
   Dernier fichier scanné : {{state.actualPath}}<br/>
+  Etape : {{state.step}}<br/>
   Dernier scan terminé le <span ng-if="state.lastEnd">{{state.lastEnd | date:'dd/MM/yyyy HH:mm:ss'}}</span><br/>
   Dernier scan démarré le {{state.lastStart | date:'dd/MM/yyyy HH:mm:ss'}}<br/>
-  Dernier état de scan terminé : {{scan.lastRunEndState}}<br/>
+  Dernier état de scan terminé : {{state.lastRunEndState}}<br/>
 </div>
