--- a/HTML/app/views/state.html
+++ b/HTML/app/views/state.html
@@ -1,4 +1,9 @@
 <div class="statePage">
+  <nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
+      <li class="active"><a snap-toggle="left">Menu</a></li>
+    </ul>
+  </nav>
   Information à propos du scan :<br/>
   Dernier fichier scanné : {{state.actualPath}}<br/>
   Etape : {{state.step}}<br/>
