[JAVA HTML] Improve error management, create list of all files excluded

--- a/HTML/app/views/state.html
+++ b/HTML/app/views/state.html
@@ -3,12 +3,14 @@
     <ul class="nav navbar-nav">
       <li class="active"><a snap-toggle="left">Menu</a></li>
       <li><a ng-click="launchScan()">Lancer une demande de scan</a></li>
+      <li><a ng-click="launchErrors()">Rafraichir les erreurs du dernier scan</a></li>
 
     </ul>
   </nav>
 
+  <div>{{errorLaunchScan}}</div>
 
-  Information à propos du scan :<br/>
+  Information à propos du scan :<br/><br/>
   Dernier fichier scanné : {{state.actualPath}}<br/>
   Etape : {{state.step}}<br/>
   Dernier scan terminé le <span ng-if="state.lastEnd">{{state.lastEnd | date:'dd/MM/yyyy HH:mm:ss'}}</span><br/>
@@ -16,5 +18,15 @@
   Dernier état de scan terminé : {{state.lastRunEndState}}<br/>
 
 
-  <div>{{errorLaunchScan}}</div>
+  <div ng-if="photosInErrors.length > 0">
+    Photos en erreur lors du dernier scan ({{photosInErrors.length}}) :
+    <div ng-repeat="error in photosInErrors">
+      {{error.path}} : <b>{{error.kind}}</b> <br/>
+      {{error.message}}
+      <hr/>
+    </div>
+  </div>
+  <div ng-if="photosInErrors.length === 0">
+    Aucune erreur à afficher
+  </div>
 </div>
